recreate/test_cases/test_case_3_folder/test_case_3_folder.out
/home/shanghuang/Documents/Code related/SoftwareBugDetectionUsingCallGraphReferences/recreate/test_cases/test_case_3_folder/test_case_3.cpp:26:80: error: stray ‘\’ in program
   26 | #define IOS                                                                    \\
   27 |   std::ios::sync_with_stdio(false);                                            \\
/home/shanghuang/Documents/Code related/SoftwareBugDetectionUsingCallGraphReferences/recreate/test_cases/test_case_3_folder/test_case_3.cpp:71:3: note: in expansion of macro ‘IOS’
   71 |   IOS;
      |   ^~~
/home/shanghuang/Documents/Code related/SoftwareBugDetectionUsingCallGraphReferences/recreate/test_cases/test_case_3_folder/test_case_3.cpp:27:80: error: stray ‘\’ in program
   27 |   std::ios::sync_with_stdio(false);                                            \\
   28 |   cin.tie(NULL);                                                               \\
/home/shanghuang/Documents/Code related/SoftwareBugDetectionUsingCallGraphReferences/recreate/test_cases/test_case_3_folder/test_case_3.cpp:71:3: note: in expansion of macro ‘IOS’
   71 |   IOS;
      |   ^~~
/home/shanghuang/Documents/Code related/SoftwareBugDetectionUsingCallGraphReferences/recreate/test_cases/test_case_3_folder/test_case_3.cpp:28:80: error: stray ‘\’ in program
   28 |   cin.tie(NULL);                                                               \\
   29 |   cout.tie(NULL);
/home/shanghuang/Documents/Code related/SoftwareBugDetectionUsingCallGraphReferences/recreate/test_cases/test_case_3_folder/test_case_3.cpp:71:3: note: in expansion of macro ‘IOS’
   71 |   IOS;
      |   ^~~
